Try a graalvm build